--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,6 +3,7 @@
 {% block title%}  {{post.title}}  {% endblock%}
 {% load crispy_forms_tags %}
 {% block nav %}
+<!--nav bar-->
   <li>
     <a class="nav-link" href="{% url 'post_new'%}"><i class="fa fa-plus">Add post</i></a>
   </li>
@@ -14,102 +15,106 @@
 
 
 {% block content%}
-
-<div class="col-xs-12 col-sm-10 col-md-8">
-
-
+<!--body-->
+<div class="col-xs-12 col-sm-12 col-md-8">
   <br>
+
   <!--buttons-->
-
-<p>
-<button class="btn btn-outline-light"data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-<i class="fas fa-caret-down  text-dark" >
-</i>more
-</button>
-{% if not post.published_date %}
-<a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary">Publish</a>
-{% endif %}
-  
-</p>
-<div class="collapse" id="collapseExample">
-  <div class="card card-body button-card  ">
-    {% if user.is_authenticated %}
-    
-    <a  href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark"><i class="fa fa-edit" > Edit</i></a>
-  
-    <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
-    <i class="fas fa-trash-alt" > Delete</i>
-    </a>
-
-    {% endif %}
-  </div>
-</div>
-
-  <!--post-->
-  <div class="">
-
-    <!-- Title -->
-    <h1 class="display-4 text-center">{{ post.title }}</h1>
-
-    <!-- Author -->
-<div class="btn-group align-self-right">
-
-  <button class="btn btn-outline-light dropdown-toggle text-dark" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="align:center;">
-    by {{post.author}}
-  </button>
-  <div class="dropdown-menu">
-    <a class="dropdown-item" href="#">Mail--> {{author_details.email}}</a>
-    <a class="dropdown-item" href="#">All posts, {{author_posts_count}}</a>
-    
-    <div class="dropdown-divider"></div>
-    <div class="dropdown-item">
-    
-    {% if author_posts %}
-    <a class="dropdown-item" href="#">{{post.author}}'s Posts
-    <ul>
-    
-    {% for author_posts in author_posts %}
-    
-    {% if author_posts.published_date %}
-    <li>
-      <a class="text-info" href= "{% url 'post_detail' pk=author_posts.pk %}">{{author_posts.title | truncatechars:15}}</a>
-    </li>
-    {% endif %}
-    
-    {% endfor %}
-    
-     </a>
-    </ul>
-    {% endif %}
+  <div>
+    <p>
+      <button class="btn btn-outline-light"data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <i class="fas fa-caret-down  text-dark" >
+        </i>more
+      </button>
+      {% if not post.published_date %}
+        <a href="{% url 'post_publish' pk=post.pk %}" class="btn btn-outline-primary">Publish</a>
+      {% endif %} 
+    </p>
+    <div class="collapse" id="collapseExample">
+      <div class="card card-body button-card  ">
+        {% if user.is_authenticated %}
+        <a  href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark"><i class="fa fa-edit" > Edit</i></a>
+        <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
+         <i class="fas fa-trash-alt" > Delete</i>
+        </a>
+        {% endif %}
+      </div>
     </div>
   </div>
-</div>
-    <!-- Date/Time -->
-    {% if post.published_date %}
-    {% if post.edited_date%}
-    <p class="text-muted"> Edited: {{ post.edited_date }} </p>
-    {% endif%} 
-    {% endif%}
+
+  <!--post body-->
+  <div>
+    <!-- Title -->
+    <h1 class="display-4 text-center">{{ post.title }}</h1>
     
-    <!-- Preview Image 
-    <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
-    <hr>
-    -->
+    <!-- Author -->
+    <div class="btn-group">
+        <button class="btn btn-outline-light dropdown-toggle text-dark" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="align:center;">
+          by {{post.author}}
+        </button>
+        <div class="dropdown-menu">
+          <i class="dropdown-item" href="#">Mail--> {{author_details.email}}</i>
+          <i class="dropdown-item" href="#">All posts, {{author_posts_count}}</i>
+          <div class="dropdown-divider"></div>
+          <div class="dropdown-item">
+            {% if author_posts %}
+            <ul>
+              <b>
+                <u>
+                 {{post.author}}'s Posts
+                </u>
+              </b>
+              <div class="card card-body">
+                {% for author_posts in author_posts %}
+                {% if author_posts.published_date %}
+                <li>
+                  <a class="text-info" href= "{% url 'post_detail' pk=author_posts.pk %}">{{author_posts.title | truncatechars:15}}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+              </div>
+            </ul>
+            {% endif %}
+          </div>
+        </div>
+    </div>
+
+    <!-- Date/Time -->
+    <div>
+      {% if post.published_date %}
+      {% if post.edited_date%}
+      <p class="text-muted"> Edited: {{ post.edited_date }} </p>
+      {% endif%} 
+      {% endif%}
+    </div>
+
+    <!-- image preview -->
+    <div>
+      <!-- Preview Image 
+      <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+      <hr>
+      -->
+    </div>
+
     <!-- Post body -->
-    <p class="lead">{{ post.text |markdown | safe| linebreaksbr }}</p>
+    <div class="card card-body ">
+      <p class="lead">{{ post.text |markdown | safe| linebreaksbr }}</p>
+    </div>
+    <br>
 
   </div>
-{% if  post.published_date %}
-  <div class="card my-8 comment-card">
-    <!-- Comments Form -->
+  
+  <!--Comment Body-->
+  {% if  post.published_date %}
+  <div class="card comment-card">
+    <!--write comment -->
+    <div>
       <h5 class="card-header">leave a comment:</h5>
       {% if user.is_authenticated %}
       <div class="card-body">
         <form method="post" class="form-group" action="{% url 'add_comment_to_post' pk=post.pk %}">
-          <div class="form-group">
-            {% csrf_token %}
-            {{ form|crispy }}
-          </div>
+          {% csrf_token %}
+          {{ form|crispy }}
           <button type="submit" class="btn btn-primary">Comment</button>
         </form>
       </div>
@@ -118,42 +123,38 @@
         <a href="{% url 'add_comment_to_post' pk=post.pk  %}">Login to comment</a>
       </div>
       {% endif %}
-    {% endif %}
-    <br>
-    <!-- Single Comment -->
-    {% for comment in post.comments.all %}
-    {% if user.is_authenticated or comment.approved %}
-    <div class="padding">
-      <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-      <div class="media-body">
-        <h5 class="mt-0">{{comment.author}}</h5>
-        <h6 class="mt-0">{{comment.created_date}}</h6>
-        {% if not comment.approved and user.is_superuser %}
-        <a href="{% url 'comment_approve' pk=comment.pk %}"> <i class="fas fa-check"></i></a>
-        <a href="{% url 'comment_remove' pk=comment.pk %}"><i class="fas fa-trash-alt"></i></a>
-        {% endif %}
-        <p> {{comment.text | markdown | safe |linebreaksbr}} </p>
-      </div>
+      {% endif %}
     </div>
     
-    <!-- Comment with nested comments (replies) -->
-    <div class=" my-6">
-      <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-      <div class="media-body">
-        <h5 class="mt-0">Commenter Name</h5>congue felis in faucibus.
+    <br>
+    <!-- Display comment -->
+    <div class="card card-body">
+      {% for comment in post.comments.all %}
+      {% if user.is_authenticated or comment.approved %}
+      <div class="card card-body media-body">
+        <div>
+        <img class=" mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+          <h5 class="mt-0">{{comment.author}}</h5>
+          <h6 class="mt-0">{{comment.created_date}}</h6>
+          {% if not comment.approved and user.is_superuser %}
+            <a href="{% url 'comment_approve' pk=comment.pk %}"> <i class="fas fa-check"> Approve </i></a>
+            <a href="{% url 'comment_remove' pk=comment.pk %}"><i class="fas fa-trash-alt text-danger">   Delete</i></a>
+          {% endif %}
+          <div> {{comment.text | markdown | safe}} </div>
+        </div>
       </div>
+      {% endif %}
+      {% empty %}
+      {% if  post.published_date %}
+    
+      <!-- If No Comment -->
+      <div>
+        <p>No comment yet...</p>
+      </div>
+    
+      {% endif %}
+      {% endfor %}
     </div>
-    {% endif %}
-
-    {% empty %}
-    {% if  post.published_date %}
-    <div>
-    <p>No comment yet...</p>
-    </div>
-    {% endif %}
-    {% endfor %}
   </div>
-  
-
 </div>
 {% endblock %}
