--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -16,7 +16,7 @@
 
 <div class="container mt-4 mb-4">
     <div class="row justify-content-center">
-      <div>
+      <div class="col-6">
         {% include "message.html" %}
           <form method="POST" >
             {% csrf_token %} {{ form|crispy }}
