--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,67 +20,12 @@
   </head>
 
   <body>
+   
+    {% block mainnav %}
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg bg-light navbar-light sticky-top mb-4">
-
-      <div class="container">
-
-        <!-- Logo -->
-        <div class="navbar-header">
-          <h1> <a class="navbar-brand" href="{% url 'post_list'%}"><i class="fas fa-feather-alt"></i></i>Wise Programmer Blog</a> </h1>
-        </div>
-
-        <!-- toggle button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        
-        <!-- search input n button -->
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="nav navbar-nav ml-auto">
-            <form method="get" action="{%url 'search' %}" class="form-inline my-2  ">
-              <div class="input-group mb-3">
-                <input type="search" name="query" class="form-control" placeholder="Search post" aria-label="Search post" aria-describedby="basic-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-outline-secondary" type="submit">
-                    <i class="fas fa-search"></i>
-                  </button>
-                </div>
-              </div>
-            </form>
-          </ul>
-        </div>
-
-        <!-- Navbar links -->
-        <div class="collapse navbar-collapse " id="collapsibleNavbar">
-          <ul class="nav navbar-nav ml-auto">  
-            {% if user.is_authenticated %}
-            {% block nav %} {% endblock%}
-            <li class="nav-item dropdown">
-
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user.username}}</a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="nav-link btn-outline-light" href="{% url 'profile'%}"><i class="far fa-user ">Profile</i></a>
-                
-                <a class="nav-link" href="{% url 'password_change'%}">Change password</a>
-                <div class="dropdown-divider"></div>
-                <a class="nav-link btn-outline-danger" href="{% url 'logout'%}"><i class="fas fa-sign-out-alt fa"></i>Log out</a>
-              </div>
-            </li> 
-          </ul>
-          {% else %}
-
-                <form class="form-inline ">
-                  <a class="btn btn-outline-secondary mr-4" href="{% url 'login'%}" ><i class="fas fa-sign-in-alt fa"></i>Log in</a>
-                  <a class="btn btn-primary mr-4" href="{% url 'signup'%}" ><i class="fas fa-user-plus"></i> Sign up</a>
-                </form>
-
-                {% endif %} 
-        </div>
-
-      </div>
-    </nav>
     <!-- Page Content -->
+    {% endblock %}
+    
 
     
     
