--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -2,15 +2,10 @@
 {% load markdownify %}
 {% block title%}  {{post.title}}  {% endblock%}
 {% load crispy_forms_tags %}
-{% block nav %}
-<!--nav bar-->
-  <li>
-    <a class="nav-link" href="{% url 'post_new'%}"><i class="fa fa-plus">Add post</i></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'post_draft_list' %}"><i class="fas fa-pencil-ruler fa">view drafts</i></a>
-  </li>
-{% endblock%}
+{% block mainnav %}
+    {% include "navbar.html" %}
+{% endblock %}
+
 
 
 
@@ -22,6 +17,7 @@
   <!--buttons-->
   <div>
     <p>
+    {% if user.is_authenticated  %}
       <button class="btn btn-outline-light "data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
         <i class="fas fa-caret-down  text-dark" >
         </i>more
@@ -32,7 +28,7 @@
     </p>
     <div class="collapse" id="collapseExample">
       <div class="card card-body button-card  ">
-        {% if user.is_authenticated  %}
+        
         <a  href="{% url 'post_edit' pk=post.pk %}" class="btn btn-outline-dark"><i class="fa fa-edit" > Edit</i></a>
         <a href="{% url 'post_delete' pk=post.pk %}" class="btn btn-outline-danger" onclick="return confirm('Are you sure you want to delete this Post ?')">
          <i class="fas fa-trash-alt" > Delete</i>
