--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -1,13 +1,8 @@
 {% extends 'blog/base.html' %}
 {% block title%} My Draft Posts {% endblock%}
-{% block nav %}
-<li class="nav-item">
-    <a class="nav-link" href="{% url 'post_new'%}"><i class="fa fa-plus">Add post</i></a>
-</li>
-<li class="nav-item active">
-    <a class="nav-link" href="{% url 'post_draft_list' %}"><i class="fas fa-pencil-ruler fa">view drafts</i></a>
-</li>
-{% endblock%}
+{% block mainnav %}
+    {% include "navbar.html" %}
+{% endblock %}
     {% block content%}
     {% if posts%}
         {% for post in posts %}
@@ -21,6 +16,16 @@
             </div>
         {% endfor %}
          {% else %}
-         no drafts
+         <div class="container mt-4 mb-4">
+            <div class="row justify-content-center">
+                <div class="col-md-5 ">
+                    <div class=" text-center text-muted ">
+                        <i class="fas fa-sad-tear fa-8x "></i>
+                        <h1 class="display-4 ">No drafts</h1>
+                    </div>
+                </div>
+                </div>
+                </div>
+  <hr class="my-4">
     {% endif %}
     {% endblock %}
