--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,16 +1,9 @@
 {% extends 'blog/base.html' %} {% block title%} {{ post.title }} {% endblock%}
-{% load crispy_forms_tags %} {% block nav %}
-<li class="nav-item active">
-  <a class="nav-link" href="{% url 'post_new'%}"
-    ><i class="fa fa-plus">Add post</i></a
-  >
-</li>
-<li class="nav-item">
-  <a class="nav-link" href="{% url 'post_draft_list' %}"
-    ><i class="fas fa-pencil-ruler fa">view drafts</i></a
-  >
-</li>
-{% endblock%} {% block content%}
+{% load crispy_forms_tags %} 
+{% block mainnav %}
+  {% include "navbar.html" %}
+{% endblock %}
+{% block content%}
 
 
 
