--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,15 +2,9 @@
 {% load markdownify %}
 {% block title%} My Blog {% endblock%}
 
-{% block nav %}
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'post_new'%}"><i class="fa fa-plus">Add post</i></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'post_draft_list' %}"><i class="fas fa-pencil-ruler fa">view drafts</i></a>
-  </li>
-{% endblock%}
-
+{% block mainnav %}
+    {% include "navbar.html" %}
+{% endblock %}
 
 {% block content%}
 
