--- a/blog/templates/blog/user_profile.html
+++ b/blog/templates/blog/user_profile.html
@@ -1,16 +1,9 @@
 {% extends 'blog/base.html' %} {% load markdownify %} {% block title%} My Blog
-{% endblock%} {% block nav %}
-<li class="nav-item">
-  <a class="nav-link" href="{% url 'post_new'%}"
-    ><i class="fa fa-plus">Add post</i></a
-  >
-</li>
-<li class="nav-item">
-  <a class="nav-link" href="{% url 'post_draft_list' %}"
-    ><i class="fas fa-pencil-ruler fa">view drafts</i></a
-  >
-</li>
-{% endblock%} {% block content%}
+{% endblock%} 
+{% block mainnav %}
+  {% include "navbar.html" %}
+{% endblock %} 
+{% block content%}
 <h1>{{profile}}</h1>
 <h1>{{profile.email}}</h1>
 {% endblock%}
