--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -7,10 +7,12 @@
         <div class="col-md-5 ">
             <div class="card">
                 <div class="card-body"> 
+                <a class="text-center mb-4 text-dark" href="{% url 'post_list'%}"><h2 > <i class="fas fa-feather-alt"></i> </h2></a>
                 <h2 class="text-center">Log in</h2>
                 <form method="post" class="form-group" novalidate>
                         {% csrf_token %}
                         {{ form|crispy }}
+                        <a href="#">Forgot password ?</a>
                         <div class="row justify-content-center">
                             <button type="submit" class="btn btn-primary">Log in</button>
                         </div>
