--- a/blog/templates/registration/password_change_form.html
+++ b/blog/templates/registration/password_change_form.html
@@ -7,7 +7,8 @@
         <div class="col-md-5 ">
             <div class="card">
                 <div class="card-body"> 
-                    <h2 class="text-center">Change Your Password</h2>
+                <a class="text-center mb-4 text-dark" href="{% url 'post_list'%}"><h2 > <i class="fas fa-feather-alt"></i> </h2></a>
+                <h2 class="text-center mb-4">Change Your Password</h2>
                     <form method="post" class="form-group" novalidate>
                         {% csrf_token %}
                         {{ form|crispy }}
