--- a/blog/templates/registration/signup.html
+++ b/blog/templates/registration/signup.html
@@ -6,7 +6,8 @@
     <div class="row justify-content-center">
         <div class="col-md-5 ">
             <div class="card">
-                <div class="card-body"> 
+                <div class="card-body">
+                <a class="text-center mb-4 text-dark" href="{% url 'post_list'%}"><h2 > <i class="fas fa-feather-alt"></i> </h2></a>
                     <h2 class="text-center">Sign up</h2>
                     <form method="post" class="form-group" novalidate>
                         {% csrf_token %}
@@ -15,7 +16,8 @@
                             <button type="submit" class="btn btn-primary">Sign up</button>
                         </div>
                     </form>
-                </div> 
+                </div>
+                <p class="text-center">Have an account ? <a href="{% url 'login'%}"> Login</a></p>
             </div>
         </div>
     </div>  
